# vincent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  kokoro_info.py  pyproject.toml  voice_chat.py
tests/: __init__.py  test_audio_recording_paths.py  test_cli_args.py  test_cli_loop.py  test_kokoro_info.py  test_opencode_client.py  test_session_state.py  test_voice_chat_core.py  test_whisper_input.py
vincent/: __init__.py  audio_recording.py  cli.py  kokoro_info.py  kokoro_output.py  opencode_client.py  whisper_input.py
